k8s/pod_man.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hawall
  template:
    metadata:
      labels:
        app: hawall
    spec:
      containers:
      - name: backend
        image: aramk0/back_end
        ports:
        - containerPort: 8000


        volumeMounts:
        - name: frontend-files
          mountPath: /app/frontend
        - name: secret-volume
          mountPath: /etc/secrets

        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000


      volumes:
      - name: frontend-files
        emptyDir: {}
      - name: secret-volume
        secret:
          secretName: my-secret
